--- a/notika/green-horizotal/modals.html
+++ b/notika/green-horizotal/modals.html
@@ -1150,6 +1150,6 @@
 
 
     <!-- Main JS Module Entry -->
-    <script type="module" src="./src/js/pages/modals.js"></script>
+    <script type="module" src="/src/js/pages/modals.js"></script>
 </body>
 </html>
